parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail01_EXCLUDE.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail01_EXCLUDE.json
---
Ok(
    String(
        "A JSON payload should be an object or array, not a string.",
    ),
)
