parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail09.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail09.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
        ],
        actual: RBrace,
        invalid_row: 1,
        invalid_col: 22,
    },
)
