parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail20.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail20.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            Null,
            LBrace,
            LBracket,
            True,
            False,
        ],
        actual: Colon,
        invalid_row: 1,
        invalid_col: 17,
    },
)
