parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail21.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail21.json
---
Err(
    ExpectedTokenError {
        expected: [
            Colon,
        ],
        actual: Comma,
        invalid_row: 1,
        invalid_col: 26,
    },
)
